introduce API redirect link
